cmake_minimum_required(VERSION 3.22)
project(LaboratorioDeProgramacao C)

set(CMAKE_CXX_STANDARD 99)

add_executable(Aula01ExercicioDeFixacao01 Aula01/ExercicioDeFixacao01/ExercicioDeFixacao01.c)
add_executable(Aula01ExercicioDeFixacao02 Aula01/ExercicioDeFixacao02/ExercicioDeFixacao02.c)
add_executable(Aula01ExercicioDeFixacao03 Aula01/ExercicioDeFixacao03/ExercicioDeFixacao03.c)
add_executable(Aula01ExercicioDeFixacao04 Aula01/ExercicioDeFixacao04/ExercicioDeFixacao04.c)
add_executable(Aula01ExercicioDeFixacao05 Aula01/ExercicioDeFixacao05/ExercicioDeFixacao05.c)
add_executable(Aula01ExercicioDeFixacao06 Aula01/ExercicioDeFixacao06/ExercicioDeFixacao06.c)
add_executable(Aula01ExercicioDeFixacao07 Aula01/ExercicioDeFixacao07/ExercicioDeFixacao07.c)
add_executable(Aula01ExercicioDeFixacao08_0 Aula01/ExercicioDeFixacao08/ExercicioDeFixacao08_0.c)
add_executable(Aula01ExercicioDeFixacao08_1 Aula01/ExercicioDeFixacao08/ExercicioDeFixacao08_1.c)
add_executable(Aula01ExercicioDeFixacao09_0 Aula01/ExercicioDeFixacao09/ExercicioDeFixacao09_0.c)
add_executable(Aula01ExercicioDeFixacao09_1 Aula01/ExercicioDeFixacao09/ExercicioDeFixacao09_1.c)
add_executable(Aula01ExercicioDeFixacao10_0 Aula01/ExercicioDeFixacao10/ExercicioDeFixacao10_0.c)
add_executable(Aula01ExercicioDeFixacao10_1 Aula01/ExercicioDeFixacao10/ExercicioDeFixacao10_1.c)
add_executable(Aula01ExercicioDeFixacao10_2 Aula01/ExercicioDeFixacao10/ExercicioDeFixacao10_2.c)
add_executable(Aula01ExercicioDeFixacao11_0 Aula01/ExercicioDeFixacao11/ExercicioDeFixacao11_0.c)
add_executable(Aula01ExercicioDeFixacao11_1 Aula01/ExercicioDeFixacao11/ExercicioDeFixacao11_1.c)
add_executable(Aula01ExercicioDeFixacao12 Aula01/ExercicioDeFixacao12/ExercicioDeFixacao12.c)
add_executable(Aula01ExercicioDeFixacao13 Aula01/ExercicioDeFixacao13/ExercicioDeFixacao13.c)
add_executable(Aula02ExercicioDeFixacao02 Aula02/ExercicioDeFixacao02/ExercicioDeFixacao02.c)
add_executable(Aula02ExercicioDeFixacao03 Aula02/ExercicioDeFixacao03/ExercicioDeFixacao03.c)
add_executable(Aula02ExercicioDeFixacao04 Aula02/ExercicioDeFixacao04/ExercicioDeFixacao04.c)
add_executable(Aula02ExercicioDeFixacao05 Aula02/ExercicioDeFixacao05/ExercicioDeFixacao05.c)
add_executable(Aula02ExercicioDeFixacao06 Aula02/ExercicioDeFixacao06/ExercicioDeFixacao06.c)
add_executable(Aula02ExercicioDeFixacao07 Aula02/ExercicioDeFixacao07/ExercicioDeFixacao07.c)
add_executable(Aula02ExercicioDeFixacao08 Aula02/ExercicioDeFixacao08/ExercicioDeFixacao08.c)
add_executable(Aula02ExercicioDeFixacao09 Aula02/ExercicioDeFixacao09/ExercicioDeFixacao09.c)
add_executable(Aula02ExercicioDeFixacao10 Aula02/ExercicioDeFixacao10/ExercicioDeFixacao10.c)
add_executable(Aula02ExercicioDeFixacao11 Aula02/ExercicioDeFixacao11/ExercicioDeFixacao11.c)
add_executable(Aula02ExercicioDeFixacao12 Aula02/ExercicioDeFixacao12/ExercicioDeFixacao12.c)
add_executable(Aula02ExercicioDeFixacao13_0 Aula02/ExercicioDeFixacao13/ExercicioDeFixacao13_0.c)
add_executable(Aula02ExercicioDeFixacao13_1 Aula02/ExercicioDeFixacao13/ExercicioDeFixacao13_1.c)
add_executable(Aula02ExercicioDeFixacao14 Aula02/ExercicioDeFixacao14/ExercicioDeFixacao14.c)
add_executable(Aula03ExercicioDeFixacao01 Aula03/ExercicioDeFixacao01/ExercicioDeFixacao01.c)
add_executable(Aula03ExercicioDeFixacao02 Aula03/ExercicioDeFixacao02/ExercicioDeFixacao02.c)
add_executable(Aula03ExercicioDeFixacao03 Aula03/ExercicioDeFixacao03/ExercicioDeFixacao03.c)
add_executable(Aula03ExercicioDeFixacao04 Aula03/ExercicioDeFixacao04/ExercicioDeFixacao04.c)
add_executable(Aula03ExercicioDeFixacao05 Aula03/ExercicioDeFixacao05/ExercicioDeFixacao05.c)
add_executable(Aula04ExercicioDeFixacao01 Aula04/ExercicioDeFixacao01/ExercicioDeFixacao01.c)
add_executable(Aula04ExercicioDeFixacao02 Aula04/ExercicioDeFixacao02/ExercicioDeFixacao02.c)
add_executable(Aula04ExercicioDeFixacao03 Aula04/ExercicioDeFixacao03/ExercicioDeFixacao03.c)
add_executable(Aula04ExercicioDeFixacao12 Aula04/ExercicioDeFixacao12/ExercicioDeFixacao12.c)
add_executable(Aula04ExercicioDeFixacao13 Aula04/ExercicioDeFixacao13/ExercicioDeFixacao13.c)
add_executable(Aula04ExercicioDeFixacao16 Aula04/ExercicioDeFixacao16/ExercicioDeFixacao16.c)
add_executable(Aula04ExercicioDeFixacao22 Aula04/ExercicioDeFixacao22/ExercicioDeFixacao22.c)
add_executable(Aula04ExercicioDeFixacao23 Aula04/ExercicioDeFixacao23/ExercicioDeFixacao23.c)
add_executable(Aula04ExercicioDeFixacao24 Aula04/ExercicioDeFixacao24/ExercicioDeFixacao24.c)
add_executable(Aula04ExercicioDeFixacao27 Aula04/ExercicioDeFixacao27/ExercicioDeFixacao27.c)
add_executable(Aula05ExercicioDeFixacao10 Aula05/ExercicioDeFixacao10/ExercicioDeFixacao10.c)
add_executable(Aula05ExercicioDeFixacao11 Aula05/ExercicioDeFixacao11/ExercicioDeFixacao11.c)
add_executable(Aula06ExercicioDeFixacao01 Aula06/ExercicioDeFixacao01/ExercicioDeFixacao01.c)
add_executable(Aula06ExercicioDeFixacao06 Aula06/ExercicioDeFixacao06/ExercicioDeFixacao06.c)
add_executable(Prova2ProgramaPrincipal Prova2/programaPrincipal.c)
add_executable(Prova2SubMenuClientes Prova2/subMenuClientes.c)
add_executable(Prova2SubMenuProdutos Prova2/subMenuProdutos.c)
add_executable(Prova2SubMenuVendas Prova2/subMenuVendas.c)
